--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,7 @@
 
 html {
     background-color: var(--main-bg-color);
-    transition: ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
 
